# hailo-acceleration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ThirdPartyNotices.txt
.github/workflows/: build-runtime.yml  build-toolchain.yml
conversion-toolchain/: Dockerfile  MANIFEST.in  build-toolchain.sh  requirements.txt  run.sh  setup.py
conversion-toolchain/artifacts/: model.onnx  options.json
conversion-toolchain/conversion_toolchain/: logger.py  main.py  utils.py
conversion-toolchain/hailo-deps/: README.md  note.txt
conversion-toolchain/scripts/: convert.sh
examples/: README.md
examples/resources/: config.json  model.onnx
runtime-library/: CMakeLists.txt  README.md  build-runtime.sh  build-runtimes.sh
runtime-library/src/: runtime_core.c
scripts/: setup-env.sh
